@@ -4,6 +4,7 @@ import org.example.model.Expense;
 import org.example.model.ExpenseCategory;
 import org.example.service.ExpenseCrudService;
 import org.example.service.ExpenseFilterService;
+import org.example.service.ExpensePaginationService;
 import org.example.service.ExpenseSortService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,10 +13,9 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.ui.Model;
-
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -33,6 +33,12 @@ class WebExpenseControllerTest {
     private ExpenseSortService sortService;
 
     @Mock
+    private ExpensePaginationService expensePaginationService;
+
+    @Mock
+    private ExpenseController expenseController;
+
+    @Mock
     private Model model;
 
     private WebExpenseController webController;
@@ -40,8 +46,7 @@ class WebExpenseControllerTest {
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        ExpenseController expenseController = new ExpenseController(expenseCrudService, filterService, sortService);
-        webController = new WebExpenseController(expenseCrudService, filterService, sortService, expenseController);
+        webController = new WebExpenseController(expenseCrudService, filterService, sortService, expensePaginationService, expenseController);
     }
 
     @Test
@@ -49,15 +54,18 @@ class WebExpenseControllerTest {
         String startDate = "2024-01-01";
         String endDate = "2024-01-31";
         Expense expense = new Expense("Test", new BigDecimal("50.00"), ExpenseCategory.FOOD, LocalDate.of(2024, 1, 15));
+        ExpensePaginationService.PageResult<Expense> pageResult = 
+            new ExpensePaginationService.PageResult<>(List.of(expense), 0, 10, 1, 1);
         
         when(filterService.getFilteredExpenses(LocalDate.parse(startDate), LocalDate.parse(endDate), null))
-                .thenReturn(Arrays.asList(expense));
+                .thenReturn(List.of(expense));
+        when(expensePaginationService.getPageFromList(List.of(expense), 0, 10)).thenReturn(pageResult);
 
-        String result = webController.listExpenses(startDate, endDate, null, null, model);
+        String result = webController.listExpenses(startDate, endDate, null, null, 0, 10, model);
 
         assertEquals("list", result);
         verify(filterService).getFilteredExpenses(LocalDate.parse(startDate), LocalDate.parse(endDate), null);
-        verify(model).addAttribute("expenses", Arrays.asList(expense));
+        verify(model).addAttribute("expenses", List.of(expense));
         verify(model).addAttribute("totalAmount", new BigDecimal("50.00"));
         verify(model).addAttribute("startDate", startDate);
         verify(model).addAttribute("endDate", endDate);
@@ -66,14 +74,17 @@ class WebExpenseControllerTest {
     @Test
     void testListExpensesWithoutDateRange() {
         Expense expense = new Expense("Test", new BigDecimal("50.00"), ExpenseCategory.FOOD, LocalDate.now());
+        ExpensePaginationService.PageResult<Expense> pageResult = 
+            new ExpensePaginationService.PageResult<>(List.of(expense), 0, 10, 1, 1);
         
-        when(filterService.getFilteredExpenses(null, null, null)).thenReturn(Arrays.asList(expense));
+        when(expenseCrudService.getAllExpenses()).thenReturn(List.of(expense));
+        when(expensePaginationService.getPageFromList(List.of(expense), 0, 10)).thenReturn(pageResult);
 
-        String result = webController.listExpenses(null, null, null, null, model);
+        String result = webController.listExpenses(null, null, null, null, 0, 10, model);
 
         assertEquals("list", result);
-        verify(filterService).getFilteredExpenses(null, null, null);
-        verify(model).addAttribute("expenses", Arrays.asList(expense));
+        verify(expenseCrudService).getAllExpenses();
+        verify(model).addAttribute("expenses", List.of(expense));
         verify(model).addAttribute("totalAmount", new BigDecimal("50.00"));
     }
 
@@ -98,15 +109,15 @@ class WebExpenseControllerTest {
 
     @Test
     void testDeleteAllExpenses() {
-        String result = webController.deleteAllExpenses();
-        assertEquals("redirect:/expenses", result);
+        String result = webController.deleteAllExpenses(null, null, null, null, 0, 10);
+        assertTrue(result.startsWith("redirect:/expenses?"));
         verify(expenseCrudService).deleteAllExpenses();
     }
 
     @Test
     void testAddRandomExpense() {
-        String result = webController.addRandomExpense();
-        assertEquals("redirect:/expenses", result);
+        String result = webController.addRandomExpense(null, null, null, null, 0, 10);
+        assertTrue(result.startsWith("redirect:/expenses?"));
         verify(expenseCrudService).addRandomExpense();
     }
 }
