@@ -53,7 +53,7 @@ class ExpensePaginationServiceTest {
     @Test
     void testGetExpensesPageOutOfRange() {
         when(mockExpenseDAO.countAll()).thenReturn(25L);
-        when(mockExpenseDAO.findPage(2, 10)).thenReturn(Arrays.asList());
+        when(mockExpenseDAO.findPage(2, 10)).thenReturn(List.of());
 
         ExpensePaginationService.PageResult<Expense> result = paginationService.getExpensesPage(10, 10);
 
@@ -65,7 +65,7 @@ class ExpensePaginationServiceTest {
 
     @Test
     void testGetExpensesPageNegativePage() {
-        List<Expense> mockExpenses = Arrays.asList(
+        List<Expense> mockExpenses = List.of(
             new Expense("Coffee", new BigDecimal("5.50"), ExpenseCategory.FOOD, LocalDate.now())
         );
         
@@ -81,7 +81,7 @@ class ExpensePaginationServiceTest {
 
     @Test
     void testGetExpensesPageInvalidSize() {
-        List<Expense> mockExpenses = Arrays.asList(
+        List<Expense> mockExpenses = List.of(
             new Expense("Coffee", new BigDecimal("5.50"), ExpenseCategory.FOOD, LocalDate.now())
         );
         
@@ -93,5 +93,50 @@ class ExpensePaginationServiceTest {
         assertEquals(10, result.pageSize()); // Should use default size
         
         verify(mockExpenseDAO).findPage(0, 10);
+    }
+
+    @Test
+    void testGetPageFromList() {
+        List<Expense> expenses = Arrays.asList(
+            new Expense("Coffee", new BigDecimal("5.50"), ExpenseCategory.FOOD, LocalDate.now()),
+            new Expense("Bus", new BigDecimal("3.00"), ExpenseCategory.TRANSPORT, LocalDate.now()),
+            new Expense("Lunch", new BigDecimal("12.00"), ExpenseCategory.FOOD, LocalDate.now())
+        );
+
+        ExpensePaginationService.PageResult<Expense> result = paginationService.getPageFromList(expenses, 0, 2);
+
+        assertEquals(0, result.currentPage());
+        assertEquals(2, result.pageSize());
+        assertEquals(3L, result.totalElements());
+        assertEquals(2, result.totalPages());
+        assertEquals(2, result.content().size());
+        assertTrue(result.hasNext());
+        assertFalse(result.hasPrevious());
+    }
+
+    @Test
+    void testGetPageFromListEmptyList() {
+        ExpensePaginationService.PageResult<Expense> result = paginationService.getPageFromList(List.of(), 0, 10);
+
+        assertEquals(0, result.currentPage());
+        assertEquals(10, result.pageSize());
+        assertEquals(0L, result.totalElements());
+        assertEquals(0, result.totalPages());
+        assertEquals(0, result.content().size());
+        assertFalse(result.hasNext());
+        assertFalse(result.hasPrevious());
+    }
+
+    @Test
+    void testGetPageFromListPageOutOfRange() {
+        List<Expense> expenses = List.of(
+                new Expense("Coffee", new BigDecimal("5.50"), ExpenseCategory.FOOD, LocalDate.now())
+        );
+
+        ExpensePaginationService.PageResult<Expense> result = paginationService.getPageFromList(expenses, 10, 10);
+
+        assertEquals(0, result.currentPage()); // Should be adjusted to last page
+        assertEquals(1, result.totalPages());
+        assertEquals(1, result.content().size());
     }
 }
